<resources>
    <string name="app_name">A2</string>
    <string name="action_settings">Settings</string>
    <!--string constants used by the application-->
    <string name="EMPTY_NET_ID">Empty Net ID</string>
    <string name="INVALID_NET_ID">Invalid Net ID</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INVALID_DAL_EMAIL">Invalid DAL email address</string>
    <string name="EMPTY_STRING"></string>
    <string name="FIREBASE_DB_URL">https://csci3130-winter2022-a2-default-rtdb.firebaseio.com</string>

</resources>